# literature-aggregation-search

./: .env.example  .gitignore  AGENTS.md  README.md  export_results.csv  main.py  pyproject.toml  results.csv  results.txt  temp_biorxiv.json  test_pubmed_integration.py
.kiro/steering/: project.md
database/: README.md
docs/: PRD-v1.0.md  TECH_STACK_UPDATE.md  architecture.md  database_design.md  development-roadmap.md  project-task-list.md
examples/: base_engine_example.py  mesh_search_example.py  schema_usage_example.py
scripts/: cli.py  validate_uuid_migration.py
src/: configs.py
src/alembic/: alembic.ini  env.py
src/api/: main.py  schemas.py
src/configs/: api.py  app_config.py  database.py  development.py
src/database/: __init__.py  connection.py  mixins.py  models.py  repositories.py  services.py  uuid_utils.py
src/download/: chrome_downloader.py  chrome_file_downloader.py  download.py  paper_pdf_downloader.py  utils.py
src/models/: README.md  __init__.py  enums.py  schemas.py
src/processing/: __init__.py  deduplicator.py  merger.py  validator.py
src/search/: __init__.py  aggregator.py  arxiv_search.py  base_engine.py  biorxiv_search.py  pubmed_search.py  pubmed_xml_parser.py  response_formatter.py  semantic_search.py  utils.py  wos_search.py
src/utils/: api_key_manger.py
templates/: temp_arxiv.json  temp_biorxiv.json  temp_pubmed.xml  temp_pubmed_parsed_article.json  temp_semantic_scholar.json  temp_wos.json
tests/: test_database.py
tests/test_models/: __init__.py  test_enums.py  test_integration.py  test_schemas.py
(+39 files in other folders)
