[project]
name = "pubmed-mesh-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "arxiv>=2.1.3",
    "sqlalchemy>=2.0.43",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
