[project]
name = "literature-aggregation-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "arxiv>=2.1.3",
    "sqlalchemy>=2.0.43",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "fastapi-sqlalchemy>=0.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
